# grater_expectations

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_AWS.md  README_AZURE.md  azure_helpers.py  initialize_project.py  pyproject.toml  requirements.txt  requirements_azure.txt  setup.py  testing_config.yml
.github/workflows/: publish_package.yml  publish_package_to_pypi.yml  publish_package_to_testpypi.yml
bootstrap_files/: expectation_suite.ipynb  lambda_function.py  supporting_functions.py
bootstrap_files/AWS/: Dockerfile  expectation_suite.ipynb  lambda_function.py  supporting_functions.py  testing_config.yml
bootstrap_files/Azure/: Dockerfile  expectation_suite.ipynb  requirements.txt  requirements_azure.txt  supporting_functions.py  testing_config.yml
bootstrap_files/tutorial_data/: yellow_tripdata_2022-02.csv
bootstrap_files/tutorial_files/: expectation_suite.ipynb  get_tutorial_data.py  lambda_function.py  tutorial_expectation_suite copy.ipynb  tutorial_notebook.ipynb
docs/drawio/: .$general_setup.drawio.bkp  general_setup.drawio  high_level_workflow.drawio  high_level_workflow_azure.drawio  ~$general_setup.drawio.bkp
docs/templates/: ecr.sh  ge_config.yaml  provider.tf
docs/templates/AWS/: ecr.sh  (+2 more)
tutorial/: expectation_suite.ipynb  lambda_function.py  project_config.yml
tutorial_dev/: Dockerfile  build_image_store_on_ecr.sh  lambda_function.py  project_config.yml  supporting_functions.py  tutorial_notebook.ipynb
utils/: init_functions_aws.py  init_functions_config.py  init_functions_project.py  init_parser.py  initialize_functions_aws.py
(+51 files in other folders)
